--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/ContactBackupOld/ContactBackupOld.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/ContactBackupOld/ContactBackupOld.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,104 +11,83 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ContactBackupOld" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="166"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wbC-qq-X6Y">
-                    <rect key="frame" x="342" y="0.0" width="33" height="33"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="33" id="M7X-P0-vfl"/>
-                        <constraint firstAttribute="height" constant="33" id="s3t-32-044"/>
-                    </constraints>
-                    <state key="normal" image="CloseCardIcon"/>
+                    <rect key="frame" x="337" y="15" width="24" height="24"/>
+                    <state key="normal" image="iconCancelBorder"/>
                     <connections>
                         <action selector="onCloseButton" destination="iN0-l3-epB" eventType="touchUpInside" id="dXm-BS-OVi"/>
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="6s0-fY-tPe">
-                    <rect key="frame" x="15" y="15" width="319" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="AA3-H8-qkV"/>
-                    </constraints>
+                    <rect key="frame" x="62" y="16" width="41.5" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ContactBacupIcon" translatesAutoresizingMaskIntoConstraints="NO" id="feW-jJ-Vzq">
-                    <rect key="frame" x="15" y="52" width="16" height="16"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="contactPeople" translatesAutoresizingMaskIntoConstraints="NO" id="feW-jJ-Vzq">
+                    <rect key="frame" x="16" y="12" width="30" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="16" id="6Hb-4a-Jad"/>
-                        <constraint firstAttribute="width" constant="16" id="hsj-Aa-IkA"/>
+                        <constraint firstAttribute="width" constant="30" id="Qye-Fc-the"/>
+                        <constraint firstAttribute="height" constant="30" id="Xil-xR-GC6"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMn-95-4CQ">
-                    <rect key="frame" x="45" y="49.5" width="314" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="8M7-f9-AOF"/>
-                    </constraints>
+                    <rect key="frame" x="14" y="74" width="345" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4I-8h-vHI">
-                    <rect key="frame" x="15" y="75.5" width="345" height="46"/>
-                    <constraints>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="46" id="t3n-eI-5CK"/>
-                    </constraints>
+                    <rect key="frame" x="14" y="102.5" width="345" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ad6-gn-bT8">
-                    <rect key="frame" x="0.0" y="121.5" width="375" height="1"/>
-                    <color key="backgroundColor" white="0.80306919642857144" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="0.0" y="57" width="375" height="1"/>
+                    <color key="backgroundColor" name="settingsButtonColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="1" id="3Uf-o5-S3p"/>
+                        <constraint firstAttribute="height" constant="1" id="0O7-fp-ccf"/>
                     </constraints>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WQO-jr-hnY">
+                    <rect key="frame" x="319" y="143" width="42" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="78X-hs-2ha">
-                    <rect key="frame" x="14" y="122.5" width="46" height="44"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="44" id="5yY-af-Ipu"/>
-                    </constraints>
+                    <rect key="frame" x="14" y="139" width="46" height="30"/>
                     <state key="normal" title="Button"/>
                     <connections>
                         <action selector="onBackupButton" destination="iN0-l3-epB" eventType="touchUpInside" id="uLq-Q2-BUU"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WQO-jr-hnY">
-                    <rect key="frame" x="319" y="122.5" width="42" height="44"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="44" id="kMq-23-qGe"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
             <color key="backgroundColor" name="secondaryBackground"/>
             <constraints>
-                <constraint firstItem="bMn-95-4CQ" firstAttribute="leading" secondItem="feW-jJ-Vzq" secondAttribute="trailing" constant="14" id="9KO-T3-whi"/>
-                <constraint firstItem="WQO-jr-hnY" firstAttribute="top" secondItem="ad6-gn-bT8" secondAttribute="bottom" id="9jQ-hA-Qc3"/>
-                <constraint firstItem="78X-hs-2ha" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="A5d-r7-idJ"/>
-                <constraint firstItem="wbC-qq-X6Y" firstAttribute="leading" secondItem="6s0-fY-tPe" secondAttribute="trailing" constant="8" id="LzP-87-m7i"/>
-                <constraint firstItem="78X-hs-2ha" firstAttribute="top" secondItem="ad6-gn-bT8" secondAttribute="bottom" id="NnN-qt-1Wy"/>
-                <constraint firstItem="feW-jJ-Vzq" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="O6b-70-TWv"/>
-                <constraint firstAttribute="trailing" secondItem="wbC-qq-X6Y" secondAttribute="trailing" id="VW7-aV-BRf"/>
-                <constraint firstItem="u4I-8h-vHI" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="WSy-XA-tN8"/>
-                <constraint firstItem="6s0-fY-tPe" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="Y99-V1-ZxW"/>
-                <constraint firstItem="ad6-gn-bT8" firstAttribute="top" secondItem="u4I-8h-vHI" secondAttribute="bottom" id="aKi-ap-S7i"/>
-                <constraint firstAttribute="trailing" secondItem="bMn-95-4CQ" secondAttribute="trailing" constant="16" id="cJJ-Er-ARt"/>
-                <constraint firstItem="u4I-8h-vHI" firstAttribute="top" secondItem="bMn-95-4CQ" secondAttribute="bottom" constant="5" id="dkP-JS-DBC"/>
-                <constraint firstItem="feW-jJ-Vzq" firstAttribute="top" secondItem="6s0-fY-tPe" secondAttribute="bottom" constant="16" id="hHR-z4-aOX"/>
-                <constraint firstAttribute="trailing" secondItem="u4I-8h-vHI" secondAttribute="trailing" constant="15" id="jKX-KZ-Gel"/>
-                <constraint firstItem="6s0-fY-tPe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="jn0-aP-IF2"/>
-                <constraint firstItem="ad6-gn-bT8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="lbx-x4-QK8"/>
-                <constraint firstItem="bMn-95-4CQ" firstAttribute="centerY" secondItem="feW-jJ-Vzq" secondAttribute="centerY" id="oGi-ay-a8z"/>
-                <constraint firstItem="WQO-jr-hnY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="78X-hs-2ha" secondAttribute="trailing" constant="10" id="s0a-Fx-JYl"/>
-                <constraint firstItem="wbC-qq-X6Y" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="tXv-CC-oaa"/>
-                <constraint firstAttribute="trailing" secondItem="ad6-gn-bT8" secondAttribute="trailing" id="uH5-dd-RJ4"/>
-                <constraint firstAttribute="trailing" secondItem="WQO-jr-hnY" secondAttribute="trailing" constant="14" id="vam-fa-Exd"/>
+                <constraint firstItem="78X-hs-2ha" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="5Id-ME-Be3"/>
+                <constraint firstAttribute="trailing" secondItem="u4I-8h-vHI" secondAttribute="trailing" constant="16" id="8Qy-e8-rRt"/>
+                <constraint firstAttribute="trailing" secondItem="WQO-jr-hnY" secondAttribute="trailing" constant="14" id="AaO-CH-HiK"/>
+                <constraint firstItem="6s0-fY-tPe" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="E6V-ih-3wU"/>
+                <constraint firstItem="bMn-95-4CQ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="EyJ-wO-c5G"/>
+                <constraint firstItem="6s0-fY-tPe" firstAttribute="leading" secondItem="feW-jJ-Vzq" secondAttribute="trailing" constant="16" id="Mug-jT-wJN"/>
+                <constraint firstItem="feW-jJ-Vzq" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="N3K-q4-8pg"/>
+                <constraint firstItem="78X-hs-2ha" firstAttribute="top" secondItem="u4I-8h-vHI" secondAttribute="bottom" constant="16" id="O7J-6w-K9V"/>
+                <constraint firstItem="u4I-8h-vHI" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="Oa1-kN-R32"/>
+                <constraint firstItem="WQO-jr-hnY" firstAttribute="top" secondItem="u4I-8h-vHI" secondAttribute="bottom" constant="20" id="Zyg-Ed-aeF"/>
+                <constraint firstAttribute="trailing" secondItem="bMn-95-4CQ" secondAttribute="trailing" constant="16" id="aFi-VE-0aF"/>
+                <constraint firstItem="bMn-95-4CQ" firstAttribute="top" secondItem="ad6-gn-bT8" secondAttribute="bottom" constant="16" id="bSN-FM-iBi"/>
+                <constraint firstItem="u4I-8h-vHI" firstAttribute="top" secondItem="bMn-95-4CQ" secondAttribute="bottom" constant="8" id="cbJ-N8-llK"/>
+                <constraint firstItem="feW-jJ-Vzq" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="eVA-FG-jea"/>
+                <constraint firstAttribute="trailing" secondItem="wbC-qq-X6Y" secondAttribute="trailing" constant="14" id="hoi-hW-7Mf"/>
+                <constraint firstItem="ad6-gn-bT8" firstAttribute="top" secondItem="feW-jJ-Vzq" secondAttribute="bottom" constant="15" id="mRY-g7-5PW"/>
+                <constraint firstAttribute="trailing" secondItem="ad6-gn-bT8" secondAttribute="trailing" id="qPw-w6-i0Z"/>
+                <constraint firstItem="ad6-gn-bT8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="qfy-Pm-uwh"/>
+                <constraint firstItem="wbC-qq-X6Y" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="skR-uK-JhG"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -119,14 +98,17 @@
                 <outlet property="subTitle" destination="u4I-8h-vHI" id="BcG-KN-QK5"/>
                 <outlet property="titleLabel" destination="bMn-95-4CQ" id="scJ-kL-G4c"/>
             </connections>
-            <point key="canvasLocation" x="24.5" y="-21"/>
+            <point key="canvasLocation" x="23.199999999999999" y="-6.2968515742128943"/>
         </view>
     </objects>
     <resources>
-        <image name="CloseCardIcon" width="14" height="14"/>
-        <image name="ContactBacupIcon" width="18" height="18"/>
+        <image name="contactPeople" width="100" height="100"/>
+        <image name="iconCancelBorder" width="24" height="24"/>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="settingsButtonColor">
+            <color red="0.0" green="0.4823529411764706" blue="0.6705882352941176" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
