--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/WaitingForWiFiPopUp/WaitingForWiFiPopUp.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/WaitingForWiFiPopUp/WaitingForWiFiPopUp.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="94"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SyncingViaWiFiPopUpImage" translatesAutoresizingMaskIntoConstraints="NO" id="ZKm-bE-z1K">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="popupCloudBackup" translatesAutoresizingMaskIntoConstraints="NO" id="ZKm-bE-z1K">
                     <rect key="frame" x="16" y="7" width="23" height="26"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="23" id="bH9-8Y-vwc"/>
@@ -37,23 +37,23 @@
                         <constraint firstAttribute="height" constant="1" id="m5E-XM-7ov"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SFI-vN-v5Z" customClass="CircleYellowButton" customModule="Billo" customModuleProvider="target">
-                    <rect key="frame" x="296" y="61" width="70" height="24"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W15-ey-Kia">
+                    <rect key="frame" x="315" y="57" width="46" height="24"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="24" id="NSZ-lK-pID"/>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="g7p-X5-XDS"/>
+                        <constraint firstAttribute="height" constant="24" id="8Ue-73-znA"/>
                     </constraints>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title="Button"/>
                     <connections>
-                        <action selector="onSettingsButton" destination="iN0-l3-epB" eventType="touchUpInside" id="PyV-zI-LvK"/>
+                        <action selector="settingsButtonTap:" destination="iN0-l3-epB" eventType="touchUpInside" id="9xb-FM-zzj"/>
                     </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" name="secondaryBackground"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="SFI-vN-v5Z" secondAttribute="trailing" constant="9" id="15c-i5-1px"/>
+                <constraint firstAttribute="trailing" secondItem="W15-ey-Kia" secondAttribute="trailing" constant="14" id="0Ai-Ik-uhk"/>
                 <constraint firstItem="ZKm-bE-z1K" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="2pc-b2-Qxf"/>
-                <constraint firstAttribute="bottom" secondItem="SFI-vN-v5Z" secondAttribute="bottom" constant="9" id="976-oI-oiw"/>
+                <constraint firstItem="W15-ey-Kia" firstAttribute="top" secondItem="9a3-3L-tDX" secondAttribute="bottom" constant="16" id="BeB-rP-khX"/>
                 <constraint firstItem="9a3-3L-tDX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="40" id="S7U-BY-3Xd"/>
                 <constraint firstItem="6sA-hG-otO" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="aat-Ly-sOg"/>
                 <constraint firstItem="ZKm-bE-z1K" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="7" id="daL-2H-1Ug"/>
@@ -64,14 +64,14 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="settingsButton" destination="SFI-vN-v5Z" id="BSk-yN-lpM"/>
+                <outlet property="settingsButton" destination="W15-ey-Kia" id="kTa-T4-MIj"/>
                 <outlet property="titleLabel" destination="6sA-hG-otO" id="eEC-FA-egb"/>
             </connections>
             <point key="canvasLocation" x="24.5" y="53"/>
         </view>
     </objects>
     <resources>
-        <image name="SyncingViaWiFiPopUpImage" width="21" height="20"/>
+        <image name="popupCloudBackup" width="32" height="32"/>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
