--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/PhotoPrintCard/PhotoPrintCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/PhotoPrintCard/PhotoPrintCard.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -79,12 +79,8 @@
                     </constraints>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eaR-zG-3fQ">
-                    <rect key="frame" x="310" y="0.0" width="45" height="49"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="45" id="QVZ-iH-wNi"/>
-                        <constraint firstAttribute="height" constant="49" id="lt4-e8-ANB"/>
-                    </constraints>
-                    <state key="normal" image="CloseCardIcon"/>
+                    <rect key="frame" x="317" y="15" width="24" height="24"/>
+                    <state key="normal" image="iconCancelBorder"/>
                     <connections>
                         <action selector="actionCloseButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="NkM-Dj-beC"/>
                     </connections>
@@ -94,10 +90,10 @@
             <color key="backgroundColor" name="secondaryBackground"/>
             <constraints>
                 <constraint firstItem="bvM-Xr-vqS" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="7zy-zm-nPO"/>
-                <constraint firstItem="eaR-zG-3fQ" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="DFF-nD-jbd"/>
                 <constraint firstItem="bvM-Xr-vqS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="MzU-p5-AK3"/>
                 <constraint firstItem="bvM-Xr-vqS" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Ted-8T-dqW"/>
-                <constraint firstItem="eaR-zG-3fQ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="oPP-hu-K3p"/>
+                <constraint firstItem="eaR-zG-3fQ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="g6J-i0-skj"/>
+                <constraint firstAttribute="trailing" secondItem="eaR-zG-3fQ" secondAttribute="trailing" constant="14" id="tc7-bG-49j"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -107,12 +103,12 @@
                 <outlet property="imageView" destination="Zad-oz-xgP" id="1Bc-Rc-3wk"/>
                 <outlet property="playButton" destination="xU4-Pq-0Qe" id="1uZ-iz-5gv"/>
             </connections>
-            <point key="canvasLocation" x="-2572" y="-572"/>
+            <point key="canvasLocation" x="-2573.1884057971015" y="-572.20982142857144"/>
         </view>
     </objects>
     <resources>
-        <image name="CloseCardIcon" width="14" height="14"/>
         <image name="PlayVideoCardIcon" width="30" height="30"/>
+        <image name="iconCancelBorder" width="24" height="24"/>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
