--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/CampaignCard/CampaignCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/CampaignCard/CampaignCard.xib
@@ -26,18 +26,14 @@
                             <rect key="frame" x="0.0" y="0.0" width="657" height="50"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhotoPick Campaign" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yuD-Ix-VNf">
-                                    <rect key="frame" x="16" y="10" width="596" height="30"/>
+                                    <rect key="frame" x="16" y="10" width="141.5" height="30"/>
                                     <fontDescription key="fontDescription" name="TurkcellSaturaBol" family="TurkcellSaturaBol" pointSize="18"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IRm-4b-vK6">
-                                    <rect key="frame" x="627" y="10" width="30" height="30"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="30" id="1gM-Y6-xLh"/>
-                                        <constraint firstAttribute="height" constant="30" id="VNo-Wf-6jc"/>
-                                    </constraints>
-                                    <state key="normal" image="CloseCardIcon"/>
+                                    <rect key="frame" x="619" y="15" width="24" height="24"/>
+                                    <state key="normal" image="iconCancelBorder"/>
                                     <connections>
                                         <action selector="closeButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="YRx-fS-YkA"/>
                                     </connections>
@@ -46,11 +42,10 @@
                             <color key="backgroundColor" name="secondaryBackground"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="yuD-Ix-VNf" secondAttribute="bottom" constant="10" id="03y-Wh-lOj"/>
-                                <constraint firstAttribute="trailing" secondItem="IRm-4b-vK6" secondAttribute="trailing" id="NAa-Ct-1cg"/>
-                                <constraint firstItem="IRm-4b-vK6" firstAttribute="centerY" secondItem="yuD-Ix-VNf" secondAttribute="centerY" id="ix3-bb-BlG"/>
+                                <constraint firstAttribute="trailing" secondItem="IRm-4b-vK6" secondAttribute="trailing" constant="14" id="5Gd-RT-Eop"/>
+                                <constraint firstItem="IRm-4b-vK6" firstAttribute="top" secondItem="o7W-1r-sVY" secondAttribute="top" constant="15" id="hE8-We-iWO"/>
                                 <constraint firstItem="yuD-Ix-VNf" firstAttribute="leading" secondItem="o7W-1r-sVY" secondAttribute="leading" constant="16" id="mb4-bk-YI2"/>
                                 <constraint firstItem="yuD-Ix-VNf" firstAttribute="top" secondItem="o7W-1r-sVY" secondAttribute="top" constant="10" id="q4Q-oQ-jIo"/>
-                                <constraint firstItem="IRm-4b-vK6" firstAttribute="leading" secondItem="yuD-Ix-VNf" secondAttribute="trailing" constant="15" id="r8B-qR-4Hs"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="qvW-z1-DFu">
@@ -170,8 +165,8 @@
         </customObject>
     </objects>
     <resources>
-        <image name="CloseCardIcon" width="14" height="14"/>
         <image name="PlayVideoCardIcon" width="30" height="30"/>
+        <image name="iconCancelBorder" width="24" height="24"/>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
